--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.6",
+    "@pinia/nuxt": "^0.4.6",
     "@vueuse/core": "^9.6.0",
     "@vueuse/nuxt": "^9.6.0",
     "sass": "^1.56.1"
